*test fixing prettyPhoto on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -962,14 +962,9 @@ ul.nostyle i {
 
 /* prettyPhoto styling for small screens */
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) {
-.pp_pic_holder.pp_default { width: 100%!important; left: 0!important; overflow: hidden; }
-div.pp_default .pp_content_container .pp_left { padding-left: 0!important; }
-div.pp_default .pp_content_container .pp_right { padding-right: 0!important; }
-.pp_content { width: 100%!important; height: auto!important; }
-.pp_fade { width: 100%!important; height: 100%!important; }
-a.pp_expand, a.pp_contract, .pp_hoverContainer, .pp_gallery, .pp_top, .pp_bottom { display: none!important; }
-#pp_full_res img { width: 100%!important; height: auto!important; }
-.pp_details { width: 94%!important; padding-left: 3%; padding-right: 4%; padding-top: 10px; padding-bottom: 10px; background-color: #fff; margin-top: -2px!important; }
-a.pp_close { right: 10px!important; top: 10px!important; }
+@media only screen and (max-width: 500px) {
+  .preview {
+    width: 100%;
+/*     height: 36px; */
+  }
 }
